# NeuralNetworkCpp

./: CMakeLists.txt  Layer.cpp  Layer.h  NetDrawer.cpp  NetDrawer.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  README.md  cloc.txt  main.cpp  neuralnetwork.txt  utility.cpp  utility.h
